Chore: fix footer widget spacing

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -61,6 +61,7 @@ footer .widget .textwidget {
 
 @media (max-width: 1200px) {
   .footer--content .widgets {
-    padding: 0 1em;
+    /* padding: 0 1em; */
+    margin: 0 1em;
   }
 }
